# vstor-tech

./: .env.example  .env.production  .gitignore  Cargo.toml  README.md  all_source_code.txt  collected.txt  example.env  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
public/: config.js
src/: App.vue  backend.rs  lib.rs  main.js  main.rs
src/backend/: errors.rs  event_system.rs  mod.rs
src/backend/api/: health.rs  mod.rs  openapi.rs  projects.rs  skills.rs
src/backend/config/: database.rs  mod.rs
src/backend/middleware/: auth.rs  logging.rs  mod.rs  protect_write.rs
src/backend/models/requests/: projects.rs  (+1 more)
src/backend/repositories/: mod.rs  project_repo.rs  skill_repo.rs
src/backend/services/: mod.rs  project_service.rs  skill_service.rs
src/components/: GitHubStats.vue  IconPicker.vue  IconRenderer.vue  LanguageSwitcher.vue  MarkdownRenderer.vue  RepoCard.vue  SkillCard.vue  TerminalCard.vue  TerminalHeader.vue  TerminalNav.vue
src/config/: env.js
src/domain/: errors.rs  mod.rs  types.rs  validators.rs
src/domain/entities/: create_up.rs  mod.rs  project.rs  skill.rs
src/frontend/: all_source_code.txt  errors.rs  event_handler.rs  mod.rs
src/frontend/api/: mod.rs  projects.rs  skills.rs
src/frontend/events/: mod.rs
src/i18n/: index.js
src/router/: index.ts
src/shared/: errors.rs  events.rs  types.rs
src/stores/: auth.js  contacts.js  content.js  iconSources.js  services.js  skills.js
src/types/: vite-env.d.ts
src/views/: AdminView.vue  ContactsView.vue  HomeView.vue  ProjectsView.vue  ServicesView.vue
(+5 files in other folders)
