[package]
name = "vstor-tech"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["tracing"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
indexmap = { version = "2.12.0", features = ["serde"] }
leptos = "0.8.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
swagger-ui = "0.1.5"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout", "util", "limit", "filter", "load-shed", "log", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.18.1", features = ["v4"] }
